--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-ruby-devise-two-factor (1.1.0-1) UNRELEASED; urgency=medium
+ruby-devise-two-factor (1.1.0-1) unstable; urgency=medium
 
   * Initial release (Closes: #792300)
 
- -- Balasankar C <balasankarc@autistici.org>  Wed, 22 Jul 2015 17:20:40 +0530
+ -- Balasankar C <balasankarc@autistici.org>  Sat, 11 Jul 2015 10:46:04 +0530
